396322: Tooling doesn't handle java.endorsed.dir https://bugs.eclipse.org/bugs/show_bug.cgi?id=396322